# vfx

./: README.md  log.txt
s3d-ptrace/core/: CMakeLists.txt
s3d-ptrace/core/base/: CMakeLists.txt
s3d-ptrace/core/base/anim/: anim.c  anim.h  arg.c  time.c
s3d-ptrace/core/base/clip/: clip.c  clip.h  cull.c  twopass.c
s3d-ptrace/core/base/color/: rgbhsv.c
s3d-ptrace/core/base/csg/: CMakeLists.txt  csg.c  csg.h  csg.tab.h  csg.y  csglang.c  csglex.c
s3d-ptrace/core/base/gener/: affine.c  gener.h  rotsurf.c
s3d-ptrace/core/base/geom/: geom.h  inode.c  ray.h  ray.h-x  vector.c
s3d-ptrace/core/base/hdrscene/: CMakeLists.txt  hdrscene.c  hdrscene.h
s3d-ptrace/core/base/hier/: CMakeLists.txt  graph.c  group.c  hier.c  hier.h  stack.c  stack.h  xform.c
s3d-ptrace/core/base/ibl/: CMakeLists.txt  hdr.c  hdr.h  ibl.c  ibl.h  lang.c  plshadow.c
s3d-ptrace/core/base/image/: CMakeLists.txt  image.c  image.h  pngfile.c  pngfile.h
s3d-ptrace/core/base/lang/: CMakeLists.txt  lang.h  lex.c  parser.c  parser.h  parser.y  pvl.c  sdltypes.h  symbol.c  symbol.h
s3d-ptrace/core/base/laux/: CMakeLists.txt  defs.h  error.c  file.c  io.c  laux.h
s3d-ptrace/core/base/lmmove/: CMakeLists.txt  cdata.c  mmove.c  mmove.h
s3d-ptrace/core/base/lptrace/: CMakeLists.txt  aux.c  dmptrace.c  ptrace.c  ptrace.h
s3d-ptrace/core/base/map/: CMakeLists.txt  map.h  maplang.c  shademap.c
s3d-ptrace/core/base/plight/: CMakeLists.txt  plight.c  plight.h
s3d-ptrace/core/base/poly/: CMakeLists.txt  hpoly.c  poly.c  poly.h
s3d-ptrace/core/base/prim/: prim.c  prim.h  sphere.c  sphere.h
s3d-ptrace/core/base/rad/: radiosity.c  radiosity.h
s3d-ptrace/core/base/raster/: raster.h  scan_obj.c  scan_obj.h  scan_space.c
s3d-ptrace/core/base/ray/: rshade.c  rshade.c-x  rshade.h
s3d-ptrace/core/base/scene/: CMakeLists.txt  obj.c  obj.h  scene.c  scene.h
s3d-ptrace/core/base/shade/: CMakeLists.txt  glshaders.c  glshaders.h  light.c  misc.c  shade.c  shade.h  shadelang.c
s3d-ptrace/core/base/visib/: rt.c  rt.c-x  rtcsg.c  zbuf.c  zbuf.h  zsort.c  zsort.h
s3d-ptrace/core/dev/: CMakeLists.txt
s3d-ptrace/core/dev/glsl/: CMakeLists.txt  loadprogram.c  loadprogram.h  opengl.c  opengl.h  shadertable.c  shadertable.h
s3d-ptrace/core/ext/: CMakeLists.txt
s3d-ptrace/core/ext/png/: CMakeLists.txt
s3d-ptrace/core/proj/: CMakeLists.txt
s3d-ptrace/core/proj/getcolor/: CMakeLists.txt  main.c  main.h
s3d-ptrace/core/proj/mmove/: CMakeLists.txt  main.c  main.h
s3d-ptrace/core/proj/modeling/: CMakeLists.txt  main.c
(+133 files in other folders)
